2007-05-13  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/returnresp.c: In Ns_ConnReturnUnauthorized check if header
	WWW-Authenticate already exists, this is in anticipation of new 
	Digest auth method to be implemented soon.

2007-05-20  Stephen Deasey  <sdeasey@users.sf.net>

	* include/ns.h:
	* nsd/log.c (Ns_LogLevel): Add the Ns_LogLevel() function which returns
	true if the given log severity level is enabled. Sometimes the message
	you need to log is expensive to construct, so you'd like to construct it
	only if it's needed.

	* nslog/nslog.c:
	* nsdb/nsdbi.c:
	* nsproxy/nsproxymod.c: Add introspection info for callbacks.

	* nsd/proc.c (TimeArgProc): Add introspection info for the ADP (and Tcl)
	page callbacks, including a new arg proc for Ns_Time values.

	* nsd/tclcallbacks.c (Ns_TclEvalCallback): Don't log debug messages
	unconditionally for all callbacks as this can cause infinite loops
	e.g. with log filter callbacks.

2007-05-16  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/nsd.h:
	* nsd/server.c: Add new function NsRegisterServerInit() which registers
	an Ns_ServerInitProc callback. These are called once for each virtual
	server, after the config file has been parsed, to allow subsystems to
	configure themselves.

	Much of the 'crazy state' of NsInitServer() has been broken out into
	Ns_ServerInitProc callbacks within each subsystem.

	* nsd/op.c (ConfigServerProxy): 
	* nsd/fastpath.c (ConfigServerFastpath):
	* nsd/url2file.c (ConfigServerUrl2File):
	* nsd/pathname.c (ConfigServerVhost):
	* nsd/returnresp.c (ConfigServerRedirects):
	* nsd/tclinit.c (ConfigServerTcl): Add Ns_ServerInitProc configuration
	callbacks. Code migrated from NsServerInit().

	* nsd/nsconf.c (NsConfUpdate): Add new hooks NsConfigRedirects() and
	NsConfigVhost() so that the per-server initialisation callbacks can be
	registered.

	* nsd/log.c: Move existing initialisation functions to top of source
	file.

	* include/ns.h (Ns_ServerInitProc):
	* nsd/main.c (ServerInit):